--- a/assets/scss/flipover.css
+++ b/assets/scss/flipover.css
@@ -6,7 +6,7 @@
 }
 
 .hero {
-  background-image: url(/assets/img/background.jpeg);
+  background-image: url(./assets/img/background.jpeg);
   min-height: 60rem;
   position: relative;
   overflow: hidden;
@@ -141,7 +141,7 @@ header .h1-container #ani .letters {
   border-radius: 15px;
   -webkit-backface-visibility: hidden;
           backface-visibility: hidden;
-  background-image: url(/assets/img/starnight.jpeg);
+  background-image: url(./assets/img/starnight.jpeg);
   background-position: center;
   opacity: 98%;
   background-size: cover;
