--- a/assets/scss/flipover.scss
+++ b/assets/scss/flipover.scss
@@ -7,7 +7,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
 
 .hero {
-  background-image: url(./assets/img/background.jpeg);
+  background-image: url(../assets/img/background.jpeg);
   min-height: 60rem;
   position: relative;
   overflow: hidden;
@@ -169,7 +169,7 @@ header {
     border-color: rgba(0, 0, 255, 0.596);
     border-radius: 15px;
     backface-visibility: hidden;
-    background-image: url(./assets/img/starnight.jpeg);
+    background-image: url(../assets/img/starnight.jpeg);
     background-position: center;
     opacity: 98%;
     background-size: cover;
