--- a/assets/scss/flipover.css
+++ b/assets/scss/flipover.css
@@ -6,7 +6,7 @@
 }
 
 .hero {
-  background-image: url(./assets/img/background.jpeg);
+  background-image: url(../img/background.jpeg);
   min-height: 60rem;
   position: relative;
   overflow: hidden;
