--- a/assets/scss/flipover.scss
+++ b/assets/scss/flipover.scss
@@ -7,7 +7,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Anton&display=swap");
 
 .hero {
-  background-image: url(./assets/img/background.jpeg);
+  background-image: url(../img/background.jpeg);
   min-height: 60rem;
   position: relative;
   overflow: hidden;
