--- a/assets/scss/flipover.scss
+++ b/assets/scss/flipover.scss
@@ -169,7 +169,7 @@ header {
     border-color: rgba(0, 0, 255, 0.596);
     border-radius: 15px;
     backface-visibility: hidden;
-    background-image: url(./assets/img/starnight.jpeg);
+    background-image: url(../img/starnight.jpeg);
     background-position: center;
     opacity: 98%;
     background-size: cover;
